whitespace resolved

--- a/src/components/Speakers/Speaker-card/speakerCard.css
+++ b/src/components/Speakers/Speaker-card/speakerCard.css
@@ -67,7 +67,7 @@
   font-weight: 300;
   letter-spacing: 0.2rem;
   text-align: center;
-  margin-bottom: 0px;
+  margin: 1rem 0 0 0;
   height: 40%;
 }
 .card-front .card-image {
@@ -128,6 +128,7 @@
   }
   .card-front h1 {
     font-size: 1.4rem;
+    height: 33%;
   }
   .links-container-speakers {
     width: 21rem;
